# tout-doux

./: Makefile  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml  run.py
backend/backend/: .gitignore  __init__.py  project.py  share.py  tables.py  user.py  utils.py
backend/backend/templates/: show_users.html
data/: db.sqlite3
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: Accordion.js  App.js  Home.js  LoginComponents.js  Project.js  index.css  utils.js
opt/: logo.xcf
templates/: front.html  home.html  layout.html
